# kernelmethods

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  API.html  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  categorical_kernels.html  cmd2pkg  contributing.html  full_index.html  genindex.html  graph_kernels.html  history.html  index.html  installation.html  kernel_functions.html  kernel_machine.html  kernel_matrix.html  km_collections.html  numeric_kernels.html  objects.inv  operations.html  py-modindex.html  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  string_kernels.html  tox.ini  (+2 more)
.github/: ISSUE_TEMPLATE.md
_modules/: index.html
_sources/: API.rst.txt  categorical_kernels.rst.txt  full_index.rst.txt  graph_kernels.rst.txt  index.rst.txt  installation.rst.txt  kernel_functions.rst.txt  kernel_machine.rst.txt  kernel_matrix.rst.txt  numeric_kernels.rst.txt  operations.rst.txt  readme.rst.txt  string_kernels.rst.txt  usage.rst.txt  utilities.rst.txt
_static/: documentation_options.js
datasets/: comparison_JKM_Weka.py  simple_comparison_JKMs_Weka.py
demo_tutorials/: demo_kernelmethods.ipynb
docs/: API.rst  Makefile  categorical_kernels.rst  conf.py  graph_kernels.rst  index.rst  installation.rst  kernel_functions.rst  kernel_machine.rst  kernel_matrix.rst  km_collections.rst  make.bat  operations.rst  readme.rst  string_kernels.rst  usage.rst  utilities.rst
kernelmethods/: __init__.py  _version.py  algorithms.py  base.py  categorical.py  config.py  kernelmethods.py  numeric_kernels.py  (+4 more)
(+26 files in other folders)
