[build-system]
requires = ["hatchling>=1.26", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "kernelmethods"
dynamic = ["version"]
description = "Kernel methods and classes for composable kernel learning workflows."
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Pradeep Reddy Raamana", email = "raamana@gmail.com" },
]
keywords = ["kernelmethods", "kernel", "machine-learning", "scikit-learn"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.4",
]

[project.urls]
Homepage = "https://github.com/raamana/kernelmethods"
Documentation = "https://raamana.github.io/kernelmethods/"
Repository = "https://github.com/raamana/kernelmethods"
Issues = "https://github.com/raamana/kernelmethods/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["kernelmethods"]

[tool.pytest.ini_options]
addopts = "-s -v"
pythonpath = ["."]
testpaths = ["kernelmethods/tests"]
